--- a/style.css
+++ b/style.css
@@ -224,6 +224,14 @@ margin-bottom:20px;
   overflow: visible;
 }
 
+#map {
+    width: 100%;
+    height: 200px;
+    border-radius: 12px;
+    margin-top: 10px;
+}
+
+
 
 
 
